Fix: Remove execution count and add note about space complexity
The execution count was removed from the notebook. A note was added to the counting sort implementation about how to reduce space complexity.

--- a/04_Counting_sort.ipynb
+++ b/04_Counting_sort.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d259c49c",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,8 @@
     "        output.append(i)\n",
     "        print(\"Output array after adding elements:\", output)\n",
     "print(\"Final count array:\", count)\n",
-    "print(\"Sorted array:\", output)"
+    "print(\"Sorted array:\", output)\n",
+    "#Note: to avoid increasing the space complexity, we can use the input array to store the count array and then use it to sort the elements in place.\n"
    ]
   },
   {
