Refactor: Update Exponential function implementation and add iterative approach

--- a/b.ipynb
+++ b/b.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b0d8c2fd",
+   "metadata": {},
+   "source": [
+    "This code implements the Exponential (Power) function with **O(N) using Divide and Conquer Approach**.\n",
+    "\n",
+    "It recursively multiplies the base `count` times, reducing `count` by 1 each call, which results in O(N) time complexity. It is not the O(logN) optimized version, nor is it the iterative naive approach.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "38f8454f",
    "metadata": {},
    "outputs": [
@@ -29,6 +39,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "41b9bd45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "0b4e6eea",
    "metadata": {},
@@ -50,6 +68,43 @@
     "    else:\n",
     "        return 1\n",
     "print(fact(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3e40400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exponential Function using Iterative (Naive) Approach\n",
+    "def power_iterative(x, n):\n",
+    "    result = 1\n",
+    "    for _ in range(n):\n",
+    "        result *= x\n",
+    "    return result\n",
+    "\n",
+    "# Exponential Function with O(N) using Divide and Conquer Approach\n",
+    "def power_divide_conquer_on(x, n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return x * power_divide_conquer_on(x, n - 1)\n",
+    "\n",
+    "# Exponential Function with O(logN) using Divide and Conquer Approach\n",
+    "def power_divide_conquer_logn(x, n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    elif n % 2 == 0:\n",
+    "        half = power_divide_conquer_logn(x, n // 2)\n",
+    "        return half * half\n",
+    "    else:\n",
+    "        return x * power_divide_conquer_logn(x, n - 1)\n",
+    "\n",
+    "# Example usage:\n",
+    "print(\"Iterative:\", power_iterative(2, 5))\n",
+    "print(\"O(N) Divide & Conquer:\", power_divide_conquer_on(2, 5))\n",
+    "print(\"O(logN) Divide & Conquer:\", power_divide_conquer_logn(2, 5))"
    ]
   },
   {
@@ -86,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.3)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
