--- a/b.ipynb
+++ b/b.ipynb
@@ -131,6 +131,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5417f7e4",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "99abba47",
@@ -141,7 +147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.3)",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
